Warnings and automated build issues
Signed-off-by: Marko Strukelj <marko.strukelj@gmail.com>